@@ -279,6 +279,7 @@ public:
 
    bool m_fStereo3Denabled;
    int m_fStereo3D; // 0=off, 1=top/down, 2=interlaced/LG //!! support sidebyside, too?
+   bool m_useNvidiaApi;
 
    XAudPlayer *m_pxap;
 
