@@ -644,6 +644,8 @@
 #define IDC_PLUNGER_REFLECT_ENABLED_CHECK 431
 #define IDC_TRIGGER_REFLECT_ENABLED_CHECK 431
 #define IDC_CVP_CHKBOX_SHOWAUTOCOMPLETE 431
+#define IDC_USE_NVIDIA_API              431
+#define IDC_USE_NVIDIA_API_CHECK        431
 #define IDC_LIGHT_FALLOFF_POWER         432
 #define IDC_MODULATE_VS_ADD             433
 #define IDC_INTENSITY_SCALE_LIGHT       434
